src/objects/OpenHours__c.object
<CustomObject>
    <fields>
        <fullName>LeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LeadId</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Open_Lead_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Open_Hours__c</fullName>
        <label>Open Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpportunityId</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Open Hours</relationshipLabel>
        <relationshipName>Open_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Open Hours</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>LeadId__c</columns>
        <columns>Open_Hours__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OpenLeadHours Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>